--- a/Perfil.html
+++ b/Perfil.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body class="inicio">
+<body>
     <header>
         <div class="encabezado">
             <div>
@@ -27,29 +27,41 @@
             </div>
         </div>
     </header>
-    <div>
-        <img src="/img/person-circle.svg" class="user-image"/>
+    <div class="contenedor">
+        <div class="imgContenedor">
+            <img src="img/hand-index-thumb.svg" alt="lightbulb-fill">
+        </div>
+        <div class="textContenedor">
+            <h3>¡Bienvenido al área de clientes de PoulX!</h3>
+            <p>Administra tu base de clientes, registra interacciones y mejora la relación con cada uno de ellos.
+                ¡Impulsa la fidelización fácilmente!</p>
+        </div>
     </div>
-    <div>
-        <h2>Nombre</h2>
+    <div class="inicio">
+        <div>
+            <img src="/img/person-circle.svg" class="userImage" />
+        </div>
+        <div>
+            <h2>Nombre</h2>
+        </div>
+        <div>
+            <h1>Fabian Cañon</h1>
+        </div>
+        <div>
+            <p class="bold">Identificación: </p>
+            <p>1015424291</p>
+        </div>
+        <div>
+            <p class="bold">Teléfono: </p>
+            <p>+57 (311) 529 3172 </p>
+        </div>
+        <div>
+            <p class="bold">Perfil: </p>
+            <p>Administrador</p>
+
+        </div>
+        <div><a href="index.html">Cerrar Sesión</a></div>
     </div>
-    <div>
-        <h1>Fabian Cañon</h1>
-    </div>
-    <div>
-        <p class="bold">Identificación: </p>
-        <p>1015424291</p>
-    </div>
-    <div>
-        <p class="bold">Teléfono: </p>
-        <p>+57 (311) 529 3172 </p>
-    </div>
-    <div>
-        <p class="bold">Perfil: </p>
-        <p>Administrador</p>
-        
-    </div>
-    <div><a href="index.html">Cerrar Sesión</a></div>
 </body>
 
 </html>
