--- a/productos.html
+++ b/productos.html
@@ -27,8 +27,17 @@
             </div>
         </div>
     </header>
+    <div class="contenedor">
+        <div class="imgContenedor">
+            <img src="img/hand-index-thumb.svg" alt="lightbulb-fill">
+        </div>
+        <div class="textContenedor">
+            <h3>¡Bienvenido al área de productos de PoulX!</h3>
+                <p>Administra tu catálogo de huevos, precios y disponibilidad de manera eficiente. ¡Optimiza tu oferta fácilmente!</p>
+        </div>
+    </div>
     <div class="buttonaction">
-        <button class="buttonnuevo">Nuevo</button>
+        <a href="#tituloFormulario"><button class="buttonnuevo">Nuevo</button></a>
     </div>
     <table class="table">
         ,<thead><tr>
@@ -55,7 +64,7 @@
         </tr>
     </tbody>
     </table>
-    <h3 class="tituloFormulario" id="tituloformulario">Formulario de productos</h3>
+    <h3 class="tituloFormulario" id="tituloFormulario">Formulario de productos</h3>
     <div class="formulario">
         <form id="agregarProducto">
             <div>
