--- a/ventas.html
+++ b/ventas.html
@@ -27,8 +27,17 @@
             </div>
         </div>
     </header>
+    <div class="contenedor">
+        <div class="imgContenedor">
+            <img src="img/hand-index-thumb.svg" alt="lightbulb-fill">
+        </div>
+        <div class="textContenedor">
+            <h3>¡Bienvenido al área de ventas de PoulX! </h3>
+                <p>Controla tus pedidos, facturas y clientes de forma rápida y organizada. ¡Impulsa tus ventas al siguiente nivel!</p>
+        </div>
+    </div>
     <div class="buttonaction">
-        <a href="#tituloformulario"><button class="buttonnuevo">Nuevo</button></a>
+        <a href="#tituloFormulario"><button class="buttonnuevo">Nuevo</button></a>
     </div>
 
     <table class="table">
@@ -38,70 +47,69 @@
                 <th>Fecha</th>
                 <th>Cantidad</th>
                 <th>Cliente</th>
-                <th>Detalle</th>
+                <th>Producto</th>
                 <th>Valor Unitario</th>
                 <th>Valor Total</th>
                 <th>Opciones</th>
             </tr>
         </thead>
-        <tbody>
-        <tr>
-            <td>54343</td>
-            <td>9/8/2024</td>
-            <td>60</td>
-            <td>Jaime Mora</td>
-            <td>Huevos</td>
-            <td>$13000</td>
-            <td>$26000</td>
-            <td class="td-opciones"><img class="icon-eraser" src="img/edit.svg" alt="editar"><img class="icon-eraser"
-                    src="img/trash.svg" alt="Bootstrap"></td>
-        </tr>
-        <tr>
-            <td>21341</td>
-            <td>9/8/2024</td>
-            <td>90</td>
-            <td>Henry Reyes</td>
-            <td>Huevos</td>
-            <td>$13000</td>
-            <td>$39000</td>
-            <td class="td-opciones"><img class="icon-eraser" src="img/edit.svg" alt="editar"><img class="icon-eraser"
-                    src="img/trash.svg" alt="Bootstrap"></td>
-        </tr>
-
-    </tbody>
+        <tbody id="ventas-body">
+            <tr>
+                <td scope="row">54343</td>
+                <td scope="row">9/8/2024</td>
+                <td scope="row">60</td>
+                <td scope="row">Jaime Mora</td>
+                <td scope="row">Huevos</td>
+                <td scope="row">$13000</td>
+                <td scope="row">$26000</td>
+                <td scope="row" class="td-opciones"><img class="icon-eraser" src="img/edit.svg" alt="editar"><img
+                        class="icon-eraser" src="img/trash.svg" alt="Bootstrap"></td>
+            </tr>
+            <tr>
+                <td scope="row">21341</td>
+                <td scope="row">9/8/2024</td>
+                <td scope="row">90</td>
+                <td scope="row">Henry Reyes</td>
+                <td scope="row">Huevos</td>
+                <td scope="row">$13000</td>
+                <td scope="row">$39000</td>
+                <td scope="row" class="td-opciones"><img class="icon-eraser" src="img/edit.svg" alt="editar"><img
+                        class="icon-eraser" src="img/trash.svg" alt="Bootstrap"></td>
+            </tr>
+        </tbody>
     </table>
-    <h3 class="tituloFormulario" id="tituloformulario">Formulario de Ventas</h3>
+    <h3 class="tituloFormulario" id="tituloFormulario">Formulario de Ventas</h3>
 
     <div class="formulario">
         <form id="agregarVenta">
             <div>
                 <label for="idventa">id venta</label>
-                <input type="text" id="idventa"/>
+                <input type="text" id="idventa" />
             </div>
             <div>
-                <label for="fecha">Fecha</label>
-                <input type="date" id="date"/>
+                <label for="date">Fecha</label>
+                <input type="date" id="date" />
             </div>
             <div>
-                <label for="cantidad">Teléfono</label>
-                <input type="number" id="quanty"/>
+                <label for="quanty">Teléfono</label>
+                <input type="number" id="quanty" />
             </div>
-            <label for="Cliente">Cliente</label>
-            <input type="text" id="Cliente" />
+            <label for="cliente">Cliente</label>
+            <input type="text" id="cliente" />
             <div>
-                <label for="detalle">Detalle</label>
-                <input type="text" id="detalle" />
+                <label for="producto">Producto</label>
+                <input type="text" id="producto" />
             </div>
             <div>
-                <label for="valorunitario">Valor Unit.</label>
-                <input type="price" id="valorunitario" />
+                <label for="valorUnitario">Valor Unit.</label>
+                <input type="price" id="valorUnitario" />
             </div>
             <div>
                 <label for="valorTotal">Valor Total</label>
-                <input type="price" id="valortotal" />
+                <input type="price" id="valorTotal" />
             </div>
             <div class="button">
-                <button class="button-send" onclick="agregarCliente()">Enviar</button>
+                <button class="button-send" onclick="agregarVenta()">Enviar</button>
                 <button class="button-clean">Limpiar</button>
             </div>
         </form>
