--- a/forgotpassword.html
+++ b/forgotpassword.html
@@ -19,7 +19,7 @@
         <form id="loginForm" onsubmit="return validateFormforgot(event)">
             <div class="form-group">
                 <label for="email">Correo Electrónico</label>
-                <input type="text" id="email" name="email" placeholder="Introduce tu correo">
+                <input type="text" id="email" name="email" autocomplete="email" placeholder="Introduce tu correo">
                 <small class="error" id="emailError"></small>
             </div>
             <button type="submit" class="buttonlogin">Enviar</button>
