--- a/ventas.html
+++ b/ventas.html
@@ -84,14 +84,14 @@
         <form id="agregarVenta">
             <div>
                 <label for="idventa">id venta</label>
-                <input type="text" id="idventa" />
+                <input type="number" id="idventa" />
             </div>
             <div>
                 <label for="date">Fecha</label>
                 <input type="date" id="date" />
             </div>
             <div>
-                <label for="quanty">Teléfono</label>
+                <label for="quanty">Cantidad</label>
                 <input type="number" id="quanty" />
             </div>
             <label for="cliente">Cliente</label>
